--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
 		<url/>
 	</scm>
 	<properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+</properties>
+
+	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
